# FATE

./: .env  .flake8  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.mkdocs.yml  .readthedocs.yml  .sat.toml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  README_CN.md  README_zh.md  RELEASE.md  build.sh  build_standalone_docker.sh  conf.py  cv_task.md  env_vars.sh  et --hardQ  fate-configuration-en-0.5.md  fate.env  homo_nn.yaml  index.rst  mkdocs.yml  mkdocs_simple.yml  object_detection_task.md  pyproject.toml  requirements.txt  setup.py  update-readme.js
examples/testsuite/: .gitignore  DEV_README.rst  README.rst  config.yaml  hetero_binning_testsuite.json  hetero_fast_secureboost_testsuite.json  hetero_feature_selection_testsuite.json  hetero_ftl_testsuite.json  hetero_linr_testsuite.json  hetero_lr_sklearn_match.json  hetero_lr_testsuite.json  hetero_poisson_testsuite.json  hetero_secureboost_testsuite.json  hetero_stepwise_testsuite.json  homo_onehot_testsuite.json  homo_secureboost_testsuite.json  intersect_testsuite.json  local_baseline_testsuite.json  multi_pipeline_testsuite.json  psi_testsuite.json  pyproject.toml  requirements.txt  testsuite.py  union_testsuite.json
examples/testsuite/data_split/: data_split_testsuite.json
examples/testsuite/fate_testsuite/: _ascii.py  _client.py  _config.py  _flow_client.py  _io.py  _parser.py  cli.py
fate_client/: README.rst  pyproject.toml
fate_client/fate_pipeline/: pyproject.toml
fate_client/fate_testsuite/: README.rst  pyproject.toml  requirements.txt
fate_client/fate_testsuite/fate_testsuite/: _client.py  _config.py  _flow_client.py  _parser.py  cli.py  test.py  testsuite_config.yaml
fate_client/fate_testsuite/testsuite/: _flow_client.py
fate_client/flow_client/: flow.py  pyproject.toml  settings.yaml
fate_client/flow_client/flow_client/: flow.py
fate_client/flow_sdk/: pyproject.toml
fate_client/flow_sdk/client/: __init__.py  base.py
fate_client/flow_sdk/flow_sdk/: utils.py
fate_client/pipeline/: README.md  README.rst  config.yaml  pipeline_cli.py
fate_client/pipeline/backend/: config.py  pipeline.py
fate_client/pipeline/component/: __init__.py  column_expand.py  component_base.py  data_statistics.py  dataio.py  evaluation.py  hetero_data_split.py  hetero_fast_secureboost.py  hetero_feature_binning.py  hetero_feature_selection.py  hetero_ftl.py  hetero_kmeans.py  hetero_linr.py  hetero_lr.py  hetero_nn.py  hetero_pearson.py  hetero_poisson.py  hetero_secureboost.py  homo_data_split.py  homo_lr.py  homo_nn.py  homo_secureboost.py  intersection.py  local_baseline.py  one_hot_encoder.py  psi.py  reader.py  sampler.py  scale.py  union.py
fate_client/pipeline/demo/: pipeline-mini-demo.py  pipeline-upload-spark.py  pipeline-upload.py  run_pipeline_demo.py
fate_client/pipeline/interface/: __init__.py  data.py  output.py
fate_client/pipeline/param/: boosting_param.py  column_expand_param.py  consts.py  cross_validation_param.py  data_split_param.py  dataio_param.py  encrypt_param.py  evaluation_param.py  feature_selection_param.py  hetero_kmeans_param.py  homo_nn_param.py  intersect_param.py  linear_regression_param.py  local_baseline_param.py  logistic_regression_param.py  poisson_regression_param.py  psi_param.py  scale_param.py  statistics_param.py
fate_client/pipeline/test/: test_sampler.py
fate_client/pipeline/utils/: logger.py
fate_client/testsuite/: _ascii.py  _client.py  _flow_client.py  _io.py  cli.py  testsuite_config.yaml
gpu/fate-tensor-fpga/: pyproject.toml
gpu/fate-tensor-fpga/fate_tensor_fpga/: __init__.py  fpga_engine.py  fpga_tensor.py
python/: pyproject.toml  requirements-dev.txt  requirements-eggroll.txt  requirements-fate-llm.txt  requirements-fate-test.txt  requirements-fate.txt  requirements-graph-nn.txt  requirements-pulsar.txt  requirements-rabbitmq.txt  requirements-spark.txt  requirements.txt  requirements_dev.txt  setup.py  sitecustomize.py
python/arch/: __init__.py
python/arch/api/: session.py
python/compatible_hook/: __init__.py  _session.py
python/fate/: __init__.py  _info.py
python/fate/arch/: __init__.py  _standalone.py  relation_ship.py
python/fate/components/: __init__.py  __main__.py  common.py  cpn.py  loader.py
python/fate/interface/: __init__.py  _address.py  _anonymous.py  _cache.py  _checkpoint.py  _cipher.py  _computing.py  _consts.py  _context.py  _cpn_io.py  _data_io.py  _federation.py  _gc.py  _log.py  _metric.py  _model_io.py  _module.py  _param.py  _party.py  _summary.py  _table.py  _tensor.py
python/fate/test/: test_arch_protocol_phe_paillier.py  test_dtensor.py  test_histogram.py  test_matmul.py  test_ou.py  test_paillier.py  test_vertor_paillier.py
python/fate_arch/: _standalone.py  relation_ship.py
python/fate_arch/abc/: __init__.py  _components.py  _computing.py  _federation.py  _path.py  _storage.py
python/fate_arch/common/: __init__.py  _parties.py  _types.py  address.py  base_utils.py  compatibility_utils.py  conf_utils.py  log.py  (+12 more)
python/fate_client/: .gitignore  README.rst  pyproject.toml  setup.py
python/fate_flow/: CODE_STYLE.text  README.md  README.rst  README_zh.md  README_zh.rst  __init__.py  component_registry.json  fate_flow_client.py  fate_flow_server.py  job_default_config.yaml  job_default_settings.py  job_default_settings.yaml  runtime_config.py  service.sh  settings.py
python/fate_test/: README.rst  README_BENCHMARK.rst  pyproject.toml  setup.py
python/federatedml/: README.rst  README_zh.rst  __init__.py  model_base.py  transfer_conf.yaml
python/test/: test_agg.py  test_distributed_tensor.py  test_eggroll.py  test_matmul.py  test_ops.py  test_osx.py  test_script.py  test_slice.py  test_tensor.py
rust/fate-tensor/: Cargo.toml  fate_tensor.pyi  pyproject.toml  test.py
rust/fate_crypto/: Cargo.toml  README.md  pyproject.toml
rust/fate_utils/: Cargo.toml  README.md  pyproject.toml
rust/psi_ecdh_curve25519/: Cargo.toml  psi_ecdh_curve25519.pyi  pyproject.toml
(+12192 files in other folders)
