[tool.poetry]
name = "fate_testsuite"
version = "1.5.0"
description = "cli for running FATE's testsuites"
authors = ["FederatedAI <contact@FedAI.org>"]
maintainers = ["weiwee <wbwmat@gmail.com>"]
readme = "README.rst"
homepage = "https://fate.fedai.org/"
repository = "https://github.com/FederatedAI/FATE"
documentation = "https://fate.readthedocs.io/en/latest/?badge=latest"
keywords = ["FATE", "testsuite", "Federated Learning"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing"
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
loguru = "^0.5.1"
prettytable = "^0.7.2"
sshtunnel = "^0.1.5"
pyyaml = "^5.3.1"
click = "^7.1.2"
requests_toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
testsuite = "fate_testsuite.cli:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

