[tool.poetry]
name = "fate_pipeline"
version = "0.1.0"
description = "pipeline client for FATE"
authors = ["FederatedAI <contact@FedAI.org>"]
license = "Apache-2.0"
readme = "README.md"

homepage = "https://fate.fedai.org/"
repository = "https://github.com/FederatedAI/FATE"
documentation = "https://fate.readthedocs.io/en/latest/?badge=latest"
keywords = ["FATE", "pipeline", "Federated Learning"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    { include = "pipeline" }
]

[tool.poetry.dependencies]
python = "^3.6"
"ruamel.yaml" = "^0.16.10"
loguru = "^0.5.1"
tensorflow = "1.15.2"
torch = "1.4.0"
pyyaml = "^5.3.1"
flow_sdk = "^0.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
