[tool.poetry]
name = "fate_testsuite"
version = "0.1.0"
description = "testsuite for FATE"
authors = ["FederatedAI <contact@FedAI.org>"]
license = "Apache-2.0"
readme = "README.rst"

homepage = "https://fate.fedai.org/"
repository = "https://github.com/FederatedAI/FATE"
documentation = "https://fate.readthedocs.io/en/latest/?badge=latest"
keywords = ["FATE", "Federated Learning", "Testsuite"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
    "Intended Audience :: Education"
]

packages = [
    { include = "testsuite" }
]

[tool.poetry.dependencies]
python = "^3.6"
requests_toolbelt = "^0.9.1"
requests = "^2.24.0"
click = "^7.1.2"
"ruamel.yaml" = "^0.16.10"
loguru = "^0.5.1"
prettytable = "^0.7.2"
sshtunnel = "^0.1.5"
dataclasses = { version = "^0.7", python = "3.6", optional = true }

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
testsuite = "testsuite.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
