[tool.poetry]
name = "fate_test"
version = "1.8.0"
description = "test tools for FATE"
authors = ["FederatedAI <contact@FedAI.org>"]
license = "Apache-2.0"

homepage = "https://fate.fedai.org/"
repository = "https://github.com/FederatedAI/FATE"
documentation = "https://fate.readthedocs.io/en/latest/?badge=latest"
keywords = ["FATE", "Federated Learning", "Testsuite"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
    "Intended Audience :: Education"
]

packages = [
    { include = "fate_test" }
]

[tool.poetry.dependencies]
python = "^3.6"
requests_toolbelt = "^0.9.1"
requests = "^2.24.0"
click = "^7.1.2"
"ruamel.yaml" = "^0.16.10"
loguru = "^0.5.1"
prettytable = "^1.0.0"
sshtunnel = "^0.1.5"
fate_client = "^1.8"
pandas = ">=1.1.5"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
fate_test = "fate_test.scripts.cli:cli"

[build-system]
requires = ["poetry>=0.12", "setuptools>=50.0,<51.0"]
build-backend = "poetry.masonry.api"
