[tool.poetry]
name = "fate_test"
version = "2.0.0-beta"
description = "test tools for FATE"
authors = ["FederatedAI <contact@FedAI.org>"]
license = "Apache-2.0"

homepage = "https://fate.fedai.org/"
repository = "https://github.com/FederatedAI/FATE"
documentation = "https://fate.readthedocs.io/en/latest/?badge=latest"
keywords = ["FATE", "Federated Learning", "Testsuite"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
    "Intended Audience :: Education"
]

packages = [
    { include = "fate_test" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.0"
"ruamel.yaml" = "^0.16.10"
pandas = ">=1.1.5"
colorama = ">0.4.4"
prettytable = "<2.0.0,>=1.0.0"
loguru = ">=0.6.0"
poetry = ">=0.12"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
fate_test = "fate_test.scripts.cli:cli"

[build-system]
requires = ["poetry>=0.12", "setuptools>=50.0,<51.0"]
build-backend = "poetry.masonry.api"