[package]
name = "psi_ecdh_curve25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "psi_ecdh_curve25519"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.2", features = ["extension-module"] }
curve25519-dalek = { version = "3.2.1" }
sha2 = { version = "0.9.9" }

[features]
default = ["std", "u64_backend"]
simd_backend = ["curve25519-dalek/simd_backend"]
std = ["curve25519-dalek/std"]
nightly = ["curve25519-dalek/nightly"]
u64_backend = ["curve25519-dalek/u64_backend"]
u32_backend = ["curve25519-dalek/u32_backend"]
fiat_u64_backend = ["curve25519-dalek/fiat_u64_backend"]
fiat_u32_backend = ["curve25519-dalek/fiat_u32_backend"]