[package]
name = "rust_paillier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_paillier"
crate-type = ["cdylib", "staticlib", "rlib"]
bench = false

[dependencies]
numpy = "0.15.1"
pyo3 = { version = "0.15.2", features = ["extension-module"] }
rug = "1.16.0"
rand = { version = "0.8.3", features = ["getrandom"] }
rand_core = "0.6.3"
ndarray = { version = "0.15.4" }
serde = { version = "1.0.137", features = ["derive", "rc"] }
bincode = "1.3.3"
rayon = { version = "1.5.3", optional = true}

[features]
default = ["rug", "rayon"]
rug = []
rayon = ["dep:rayon", "ndarray/rayon"]

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
iai = "0.1.1"

[[bench]]
name = "paillier_bench"
harness = false

[[bench]]
name = "iai_bench"
harness = false

[package.metadata.docs.rs]
# To build locally use
#   RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = ["--html-in-header", "docs/katex-header.html"]
