[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "rust_paillier"
requires-python = ">=3.6"
description = "paillier tensor implemented using rust"
long_description_content_type = "text/markdown"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
