[package]
name = "fixedpoint_ou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true}
rug = { workspace = true }
anyhow = { workspace = true }
math = { path = "../math" }
ou = { path = "../ou" }

[dev-dependencies]
rand = { workspace = true }
