[package]
name = "math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }

[features]
default = ["rug"]
rug = []
